unpackaged/main/default/objects/Lead/fields/Last_Quote_Xometry_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Xometry_ERP_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quote ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>