unpackaged/main/default/objects/Lead/fields/Last_SDR_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_SDR_Activity__c</fullName>
    <description>The last SDR activity where the Distinct Call Type exists (e.g. 8x8 IN, 8x8 OB, CAS OB).</description>
    <inlineHelpText>The last SDR activity.</inlineHelpText>
    <label>Last SDR Activity</label>
    <type>DateTime</type>
</CustomField>