unpackaged/main/default/objects/Lead/fields/Last_SDR_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_SDR_Activity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assignee of the task associated to the Last SDR Activity Date.</description>
    <inlineHelpText>The assignee of the task associated to the Last SDR Activity Date.</inlineHelpText>
    <label>Last SDR Activity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>