unpackaged/main/default/objects/Lead/fields/Last_Sourced_Xometry_Categories__c.field-meta.xml
<CustomField>
    <fullName>Last_Sourced_Xometry_Categories__c</fullName>
    <label>Last Sourced Xometry Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>