unpackaged/main/default/objects/Lead/fields/Last_Xom_Hidden_Con__c.field-meta.xml
<CustomField>
    <fullName>Last_Xom_Hidden_Con__c</fullName>
    <description>This is a hidden field used for lead conversion.</description>
    <label>Last_Xom_Hidden_Con</label>
    <length>12</length>
    <type>Text</type>
</CustomField>