unpackaged/main/default/objects/Lead/fields/LastFusionEstimate__c.field-meta.xml
<CustomField>
    <fullName>LastFusionEstimate__c</fullName>
    <label>Last Fusion Estimate</label>
    <type>DateTime</type>
</CustomField>