unpackaged/main/default/objects/Lead/fields/LastFusionMaterial__c.field-meta.xml
<CustomField>
    <fullName>LastFusionMaterial__c</fullName>
    <label>Last Fusion Material</label>
    <type>TextArea</type>
</CustomField>