unpackaged/main/default/objects/Lead/fields/LastFusionProcess__c.field-meta.xml
<CustomField>
    <fullName>LastFusionProcess__c</fullName>
    <label>Last Fusion Process</label>
    <type>TextArea</type>
</CustomField>