unpackaged/main/default/objects/Lead/fields/Latest_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_Amount__c</fullName>
    <inlineHelpText>The Last Quote associated with the lead dollar amount</inlineHelpText>
    <label>Quote Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>