unpackaged/main/default/objects/Lead/fields/LD_USE_DnB_Connect_Company__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Connect_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow DnB Connect - Company</label>
    <type>Checkbox</type>
</CustomField>