unpackaged/main/default/objects/Lead/fields/LD_USE_DnB_Contact__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow D&amp;B Optimizer - Contact</label>
    <type>Checkbox</type>
</CustomField>