unpackaged/main/default/objects/Lead/fields/Lead_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Lead Created Date/Time</label>
    <type>DateTime</type>
</CustomField>