unpackaged/main/default/objects/Lead/fields/Lead_Creation_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creation_Email__c</fullName>
    <inlineHelpText>The original email that caused the Lead to Get Created</inlineHelpText>
    <label>Lead Creation Email</label>
    <type>Email</type>
</CustomField>