unpackaged/main/default/objects/Lead/fields/Lead_Not_Converted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Not_Converted_Reason__c</fullName>
    <description>Reason that the Lead was not converted.</description>
    <label>Lead Not Converted Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>No Project</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Incorrect Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>