unpackaged/main/default/objects/Lead/fields/Lead_Owner_Email_Int__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Email_Int__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Email Int</label>
    <type>Text</type>
</CustomField>