unpackaged/main/default/objects/Lead/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <description>Added by TMM for better report capabilities with Lead Origins, especially Outreach</description>
    <formula>IF(TEXT(LeadSource) = "Outreach","Sales Gen - Outreach",
 IF(HS_Original_source_drill_down_1__c = "SALESFORCE", "Sales Gen",
 "Marketing Gen")
)</formula>
    <label>Lead Source Category</label>
    <type>Text</type>
</CustomField>