unpackaged/main/default/objects/Lead/fields/Left_Company__c.field-meta.xml
<CustomField>
    <fullName>Left_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Company</label>
    <type>Checkbox</type>
</CustomField>