unpackaged/main/default/objects/Lead/fields/LinkedIn_Site__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Site__c</fullName>
    <formula>IF( NOT(ISBLANK( LinkedIn_Handle__c )) ,
HYPERLINK("https://www.linkedin.com/in/"+ LinkedIn_Handle__c,"Go to LinkedIn Profile", "_blank"), "No LinkedIn Handle Provided for This Account")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Site</label>
    <type>Text</type>
</CustomField>