unpackaged/main/default/objects/Lead/fields/Managed_Services__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services__c</fullName>
    <description>2021-12-21: Currently, ALL Leads are MS. In the future, this formula needs to be updated when additional lines of business start using Leads.</description>
    <formula>TRUE</formula>
    <inlineHelpText>2021-12-21: Currently, ALL Leads are MS. In the future, this formula needs to be updated when additional lines of business start using Leads.</inlineHelpText>
    <label>Managed Services</label>
    <type>Checkbox</type>
</CustomField>