unpackaged/main/default/objects/Lead/fields/Marketing_Recommended_Company__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Recommended_Company__c</fullName>
    <label>Marketing Recommended Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>