unpackaged/main/default/objects/Lead/fields/Membership_Notes__c.field-meta.xml
<CustomField>
    <fullName>Membership_Notes__c</fullName>
    <label>Membership Notes</label>
    <type>TextArea</type>
</CustomField>