unpackaged/main/default/objects/Lead/fields/MK_Customer_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Score__c</fullName>
    <description>Madkudu customer fit score (between 0 and 100)</description>
    <inlineHelpText>Madkudu customer fit score (between 0 and 100)</inlineHelpText>
    <label>MK Non-SMB Customer Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>