unpackaged/main/default/objects/Lead/fields/MK_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Segment__c</fullName>
    <description>Madkudu customer fit segment (very good, good, medium, low)</description>
    <inlineHelpText>Madkudu customer fit segment (very good, good, medium, low)</inlineHelpText>
    <label>MK Non-SMB Customer Fit Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>