unpackaged/main/default/objects/Lead/fields/MK_Lead_Grade_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade_Segment__c</fullName>
    <description>Madkudu Lead Grade segment (A, B, C, D or E)</description>
    <inlineHelpText>Madkudu Lead Grade segment (A, B, C, D or E)</inlineHelpText>
    <label>MK Lead Grade Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>