unpackaged/main/default/objects/Lead/fields/MK_SMB_Customer_Fit__c.field-meta.xml
<CustomField>
    <fullName>MK_SMB_Customer_Fit__c</fullName>
    <formula>CASE(MK_SMB_Customer_Fit_Segment__c,
'very good', IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20) + IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20) + IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20),
'good', IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20) + IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20),
'medium', IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20),
IMAGE("https://cdn.madkudu.com/images/cross.png", "Star", 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MK SMB Customer Fit</label>
    <type>Text</type>
</CustomField>