unpackaged/main/default/objects/Lead/fields/MK_Ultimate_Customer_Fit_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Ultimate_Customer_Fit_Segment__c</fullName>
    <formula>IF(Recommended_Account_LKP__r.Company_Category_Corp_Level__c = "Small Business",
 MK_SMB_Customer_Fit_Segment__c,
 MK_Customer_Fit_Segment__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MK Ultimate Customer Fit Segment</label>
    <type>Text</type>
</CustomField>