unpackaged/main/default/objects/Lead/fields/Most_Recent_Quote_Extrusion__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_Extrusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most_Recent_Quote_Metal_Extrusion</label>
    <type>Checkbox</type>
</CustomField>