unpackaged/main/default/objects/Lead/fields/Most_Recent_Quote_Process__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_Process__c</fullName>
    <formula>IF(Most_Recent_Quote_Carbon__c , 'Carbon: ', '') + 
IF(Most_Recent_Quote_CNC_Machining__c ,'CNC Machining: ', '') + 
IF(Most_Recent_Quote_Die_Casting__c ,'Die Casting: ', '') + 
IF(Most_Recent_Quote_DMLS__c,'DMLS: ', '') + 
IF(Most_Recent_Quote_Direct_Sourced__c,'Direct Sourced: ', '') + 
IF(Most_Recent_Quote_Extrusion__c,'Metal Extrusion: ', '') +
IF(Most_Recent_Quote_FDM__c, 'FDM: ', '') + 
IF(Most_Recent_Quote_HPMultiJetFusion__c,'HP Multi Jet Fusion','') + 
IF(Most_Recent_Quote_Injection_Molding__c,'Injection Molding','') + 
IF(Most_Recent_Quote_PolyJet_3D__c,'PolyJet 3D','') + 
IF(Most_Recent_Quote_SLS__c,'SLS: ','') + 
IF(Most_Recent_Quote_Sheet_Metal__c ,'Sheet Metal: ','') + 
IF(Most_Recent_Quote_Stamping__c ,'Stamping: ','') + 
IF( Most_Recent_Quote_SLA__c , 'SLA: ','') + 
IF(Most_Recent_Quote_Urethane_Casting__c,'Urethane Casting: ','')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Process</label>
    <type>Text</type>
</CustomField>