unpackaged/main/default/objects/Lead/fields/Most_Recent_Quote_Sheet_Metal__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Quote_Sheet_Metal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most_Recent_Quote_Sheet_Metal</label>
    <type>Checkbox</type>
</CustomField>