unpackaged/main/default/objects/Lead/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <label>NAICS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>