unpackaged/main/default/objects/Lead/fields/Name_of_Last_Submitted_Form__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Last_Submitted_Form__c</fullName>
    <label>Name of Last Submitted Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>