unpackaged/main/default/objects/Lead/fields/NonGeneric_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>NonGeneric_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NonGeneric BDR RR FLAG</label>
    <type>Checkbox</type>
</CustomField>