unpackaged/main/default/objects/Lead/fields/Not_Relevant_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Not_Relevant_to_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Relevant to Sales</label>
    <type>Checkbox</type>
</CustomField>