unpackaged/main/default/objects/Lead/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <inlineHelpText>How likely is it that you would recommend Xometry to a friend or colleague? Answer from SurveyMonkey</inlineHelpText>
    <label>NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>