unpackaged/main/default/objects/Lead/fields/Outreach_Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Status__c</fullName>
    <label>Current Sequence Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>