unpackaged/main/default/objects/Lead/fields/Outreach_Trigger_Guide__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Trigger_Guide__c</fullName>
    <label>Outreach Trigger Guide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>