unpackaged/main/default/objects/Lead/fields/Owner_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID_Name__c</fullName>
    <formula>Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID (Name)</label>
    <type>Text</type>
</CustomField>