unpackaged/main/default/objects/Lead/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>