unpackaged/main/default/objects/Lead/fields/Partner_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Interest</label>
    <type>Checkbox</type>
</CustomField>