unpackaged/main/default/objects/Lead/fields/Position_in_Company__c.field-meta.xml
<CustomField>
    <fullName>Position_in_Company__c</fullName>
    <label>Position in Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Position_in_Company</valueSetName>
    </valueSet>
</CustomField>