unpackaged/main/default/objects/Lead/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Primary Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>