unpackaged/main/default/objects/Lead/fields/QSO_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>QSO_Award_Date__c</fullName>
    <description>The date in which a QSO is awarded.</description>
    <inlineHelpText>The date in which a QSO is awarded.</inlineHelpText>
    <label>QSO Award Date</label>
    <type>DateTime</type>
</CustomField>