unpackaged/main/default/objects/Lead/fields/QSO_Award_Owner__c.field-meta.xml
<CustomField>
    <fullName>QSO_Award_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The owner of the QSO Award Point related to this contact/lead.</description>
    <inlineHelpText>The owner of the QSO Award Point related to this contact/lead.</inlineHelpText>
    <label>QSO Award Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>