unpackaged/main/default/objects/Lead/fields/Quote_ERP_XOM_CREATE_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ERP_XOM_CREATE_ID__c</fullName>
    <externalId>true</externalId>
    <label>Original Quote ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>