unpackaged/main/default/objects/Lead/fields/Recommended_Account__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Account__c</fullName>
    <inlineHelpText>This Name is the Recommended Name to use for Lead Conversion</inlineHelpText>
    <label>Recommended Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>