unpackaged/main/default/objects/Lead/fields/Recommended_Account_LKP__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Account_LKP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a recommended Account based on Domain Matching</inlineHelpText>
    <label>Recommended Account LKP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>