unpackaged/main/default/objects/Lead/fields/Recommended_Account_LKP_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Account_LKP_Safe_ID__c</fullName>
    <formula>CASESAFEID(Recommended_Account_LKP__c)</formula>
    <label>Recommended Account LKP Safe ID</label>
    <type>Text</type>
</CustomField>