unpackaged/main/default/objects/Lead/fields/Recommended_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Account_Owner__c</fullName>
    <formula>Recommended_Account_LKP__r.Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended Account Owner</label>
    <type>Text</type>
</CustomField>