unpackaged/main/default/objects/Lead/fields/Recommended_Account_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Account_Parent_ID__c</fullName>
    <formula>CASESAFEID(Recommended_Account_LKP__r.ParentId)</formula>
    <label>Recommended Account Parent ID</label>
    <type>Text</type>
</CustomField>