unpackaged/main/default/objects/Lead/fields/RR_AssignedDate__c.field-meta.xml
<CustomField>
    <fullName>RR_AssignedDate__c</fullName>
    <description>Date that the lead was assigned.</description>
    <label>RR AssignedDate</label>
    <type>DateTime</type>
</CustomField>