unpackaged/main/default/objects/Lead/fields/RR_Batch_Num__c.field-meta.xml
<CustomField>
    <fullName>RR_Batch_Num__c</fullName>
    <description>Used to Track the Current Placement of RR.</description>
    <label>RR_Batch_Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>