unpackaged/main/default/objects/Lead/fields/RR_Batch_Num_Match_Group__c.field-meta.xml
<CustomField>
    <fullName>RR_Batch_Num_Match_Group__c</fullName>
    <label>RR_Batch_Num_Match_Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>