unpackaged/main/default/objects/Lead/fields/RR_Flag__c.field-meta.xml
<CustomField>
    <fullName>RR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use on data loading to signal that something should be round robin.</description>
    <label>RR_Flag</label>
    <type>Checkbox</type>
</CustomField>