unpackaged/main/default/objects/Lead/fields/RR_Stamp_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>RR_Stamp_OwnerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to stamp the RR Owner.</description>
    <label>RR_Stamp_OwnerID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_RR</relationshipName>
    <type>Lookup</type>
</CustomField>