unpackaged/main/default/objects/Lead/fields/safe_lead_id__c.field-meta.xml
<CustomField>
    <fullName>safe_lead_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Lead ID</label>
    <type>Text</type>
</CustomField>