unpackaged/main/default/objects/Lead/fields/Safe_Lead_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Lead_Owner_ID__c</fullName>
    <formula>casesafeid( OwnerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Lead Owner ID</label>
    <type>Text</type>
</CustomField>