unpackaged/main/default/objects/Lead/fields/Search_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Search_Zendesk__c</fullName>
    <formula>hyperlink("https://xometry.zendesk.com/agent/search/1?q="+Email,"Search this contact in Zendesk","_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Zendesk</label>
    <type>Text</type>
</CustomField>