unpackaged/main/default/objects/Lead/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <label>Seniority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>