unpackaged/main/default/objects/Lead/fields/SFDC_HS_STOP_SYNC__c.field-meta.xml
<CustomField>
    <fullName>SFDC_HS_STOP_SYNC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Special flag to stop syncing to Hubspot for selected Leads/Contacts</inlineHelpText>
    <label>SFDC_HS_STOP_SYNC</label>
    <type>Checkbox</type>
</CustomField>