unpackaged/main/default/objects/Lead/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <label>SIC Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>