unpackaged/main/default/objects/Lead/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>The State or Province of the Contact</inlineHelpText>
    <label>Contact State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_or_Province</valueSetName>
    </valueSet>
</CustomField>