unpackaged/main/default/objects/Lead/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub-Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>