unpackaged/main/default/objects/Lead/fields/Suppress_Tasks_Flag__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Tasks_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Tasks Flag</label>
    <type>Checkbox</type>
</CustomField>