unpackaged/main/default/objects/Lead/fields/System_Reopened_Flag__c.field-meta.xml
<CustomField>
    <fullName>System_Reopened_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Reopened Flag</label>
    <type>Checkbox</type>
</CustomField>