unpackaged/main/default/objects/Lead/fields/Target_Account_2023__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_2023__c</fullName>
    <formula>IF( Recommended_Account_LKP__r.Target_Account_2023__c = TRUE, TRUE,
 IF(!ISBLANK(Recommended_Account_LKP__r.ParentId) &amp;&amp; Recommended_Account_LKP__r.Parent.Target_Account_2023__c = TRUE, TRUE,
  FALSE
 )
)</formula>
    <label>Target Account 2023</label>
    <type>Checkbox</type>
</CustomField>